# rsahp

./: .antigravityignore  .gitignore  Car Purchase.json  Cargo.toml  DESIGN.md  LICENSE  PLAN.md  README.md  ROADMAP.md  TESTING.md  TESTING_STRATEGY.md  config.json  deny.toml  design_document_versioning.md  document_export.json  lefthook.yml  start.ps1  start.sh  stop.ps1  stop.sh  typos.toml  verify.ps1
.claude/: recommended-tools.json
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/src/: ahp.rs  api.rs  api_admin.rs  api_auth.rs  api_docs.rs  config.rs  lib.rs  main.rs
backend/src/entity/: comparison.rs  document.rs  document_group_assignment.rs  document_user_assignment.rs  folder.rs  mod.rs  node.rs  user.rs  user_group.rs  user_group_membership.rs
backend/tests/: datadir_url.rs  test_documents.rs  test_folders.rs  test_math.rs
backend/tests/common/: golden_data.rs  mod.rs
common/: Cargo.toml
common/src/: datadir.rs  lib.rs
docs/superpowers/plans/: 2026-07-14-desktop-packaging.md  2026-07-14-dev-tooling-additions.md  2026-07-14-polyform-noncommercial-license.md
docs/superpowers/specs/: 2026-07-13-dev-tooling-additions-design.md  2026-07-14-desktop-packaging-design.md  2026-07-14-polyform-noncommercial-license-design.md
frontend/: Cargo.toml  config.json
frontend/src/: config.rs  lib.rs  main.rs
frontend/src/ui/: admin.rs  auth.rs  document_window.rs  explorer.rs  explorer_1151.rs  explorer_full.rs  explorer_old.rs  explorer_old.txt  explorer_very_old.rs  mod.rs  taskbar.rs  user_dashboard.rs
frontend/tests/: headless_e2e.rs  test_err.rs  test_json.rs
migration/: Cargo.toml
migration/src/: lib.rs  m0_initial.rs
packaging/linux/: generate-sources.sh  io.github.ckir.rsahp.desktop  io.github.ckir.rsahp.metainfo.xml  io.github.ckir.rsahp.yml
packaging/windows/: rsahp.iss
rsahp-desktop/: Cargo.toml
rsahp-desktop/src/: main.rs
scratch/: patch_headers.py
xtask/: Cargo.toml
xtask/src/: main.rs
