[workspace]
members = [
    "frontend",
    "backend",
    "common",
    "xtask",
    "migration"
]
resolver = "2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
unwrap_used = "warn"
expect_used = "warn"
