[package]
name = "backend"
version = "0.1.0"
publish = false
edition = "2024"
license-file.workspace = true

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.2"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
nalgebra = "0.35.0"
migration = { version = "0.1.0", path = "../migration" }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
approx = "0.5.1"
axum-test = "20.1.0"
sea-orm-migration = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
