[package]
name = "common"
version = "0.1.0"
publish = false
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
directories = "5.0"
percent-encoding = "2.3"

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
