[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.34.3"
egui = "0.34.3"
egui_ltreeview = "0.7.1"
ehttp = "0.7.1"
reqwest = { version = "0.13.4", features = ["json"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
