[package]
name = "frontend"
version = "0.1.0"
publish = false
edition = "2024"
license-file.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
eframe = "0.34.3"
egui = "0.34.3"
egui_extras = "0.34.3"
egui_ltreeview = "0.7.1"
ehttp = "0.7.1"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
axum = "0.8.9"
egui_kittest = "0.34.3"
backend = { path = "../backend" }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
